# blockchain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  block.cpp  block.h  blockchain.cpp  blockchain.h  main.cpp
includes/: block.h  blockchain.h  merkle_tree.h  transaction.h
src/: block.cpp  blockchain.cpp  main.cpp  merkle_tree.cpp  transaction.cpp
src/network/: server.cpp  settings.h  socket.h
utils/: crypto.h
